# smart_city_traffic_management_system

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  reset_system.py  vercel.json
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: admin.py  areas.py  cities.py  frontend.py  intersections.py  traffic.py  websocket.py
app/core/: config.py  traffic_logic.py
app/db/: session.py
app/models/: city.py  intersection.py  traffic.py
app/schemas/: area.py  city.py  intersection.py  traffic.py
app/services/: redis.py
app/static/css/: styles.css
app/static/js/modules/: actions.js  api.js  config.js  events.js  main.js  ui.js  visuals.js  websocket.js
app/templates/: base.html  dashboard.html
